--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node": "^20.18.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-loading-skeleton": "^3.5.0",
     "react-scripts": "^3.0.1",
     "web-vitals": "^2.1.4"
   },
